--- a/Project6_Part3.html
+++ b/Project6_Part3.html
@@ -28,7 +28,7 @@
         </div>
         <div class="hero-text">
             <h1 style="color: #FEFAE0">Hit the Road in Comfort – Find Your Perfect Motorhome Today!</h1>
-            <button>Order Now</button>
+            <button class = "btn">Order Now</button>
         </div>
        
     </section>
@@ -69,6 +69,7 @@
 
     <footer>
         <p>Contact: +xxxxxxxxxxx | xxxxx@gmail.com</p>
+        <a href="mailto:xxxxx@gmail.com"></a>
     </footer>
 
 </body>
