--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 </head>
 <body>
 
+    <nav>
+        <a href="Project6_Part1.html">First task</a>
+        <a href="Project6_Part2.html">Second task</a>
+        <a href="Project6_Part3.html">Third task</a>
+    </nav>
+
     <table>
         <tr>
             <th>Column 1</th>
@@ -51,6 +57,7 @@
             <td colspan="2" class="highlight bold">Cell 7</td>
         </tr>
     </table>
+
 
 </body>
 </html>
