--- a/my.html
+++ b/my.html
@@ -541,8 +541,8 @@
                 </ul>
             </nav>
             <div class="social-icons">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram">Instagram</i></a>
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook">Facebook</i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"><img src="Instagram.svg" width="25" height="25"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"><img src="Facebook.svg" width="25" height="25"></i></a>
             </div>
         </header>
         
@@ -617,7 +617,7 @@
                     <div class="rv-card-content">
                         <div class="rv-card-header">
                             <div class="rv-card-title">Class A</div>
-                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>-></a></div>
+                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>→</a></div>
                         </div>
                         <div class="rv-card-description">
                             A spacious, bus-style RV perfect for long road trips and luxurious interiors, a full kitchen, bathroom, and ample storage. Ideal fortravelers who seek maximum comfort on the road.
@@ -629,7 +629,7 @@
                     <div class="rv-card-content">
                         <div class="rv-card-header">
                             <div class="rv-card-title">Class B</div>
-                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>-></a></div>
+                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>→</a></div>
                         </div>
                         <div class="rv-card-description">
                             A compact, fuel-efficient van with essential amenities, including a small kitchen, bed, and bathroom. Perfect for solo travelers or couples looking for easy maneuverability and parking.
@@ -641,7 +641,7 @@
                     <div class="rv-card-content">
                         <div class="rv-card-header">
                             <div class="rv-card-title">Class C</div>
-                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>-></a></div>
+                            <div class="rv-card-arrow"><a href="#"style="text-decoration: none; color:#FEFAE0";>→</a></div>
                         </div>
                         <div class="rv-card-description">
                             A mid-sized RV with a distinctive over-cab sleeping area, offering a balance between comfort and affordability. Popular with families and easier to drive than a Class A.
@@ -693,8 +693,8 @@
                 <h2>Contacts</h2>
                 <a href="tel:+XXXXXXXXXXX">+XXXXXXXXXXX</a>
                 <a href="mailto:XXXXX@gmail.com">XXXXX@gmail.com</a>
-                <a href="#" aria-label="Instagram">instagram<i class="fab fa-instagram">📷</i></a>
-                <a href="#" aria-label="Facebook">Facebook<i class="fab fa-facebook">📘</i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"><img src="Instagram.svg" width="25" height="25"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"><img src="Facebook.svg" width="25" height="25"></i></a>
             </div>
            
         </section>
@@ -711,8 +711,8 @@
                 </ul>
             </nav>
             <div class="social-icons">
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram">Instagram</i></a>
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook">Facebook</i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"><img src="Instagram.svg" width="25" height="25"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"><img src="Facebook.svg" width="25" height="25"></i></a>
             </div>
         </footer>
     </div>
