--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </style>
 </head>
 <body>
-  <h1>WELCOME TO CHAOS👹</h1>
+  <h1><a href ="my.html" target="_blank">WELCOME TO CHAOS👹</a></h1>
   <div class="wiggle"><a href ="my.html" target="_blank"> ❌ </a></div>
   <div class="crazy-box"></div>
   <p class="rainbow-text">Try to read it😈.</p>
