--- a/my.html
+++ b/my.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorhomes</title>
-    <link rel="stylesheet" href="stylesM.css">
+    <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body>
     <div class="container">
@@ -40,9 +40,10 @@
         <div class="wave"></div>
 
         <section class="section" id="how-it-works">
-            <h2>How does it work?</h2>
+            
             <div class="how-it-works">
                 <div class="how-it-works-content">
+                    <h2>How does it work?</h2>
                     <p>Browse our selection of motor homes, choose the perfect one, and book easily with transparent pricing.</p>
                     <p>Customize your rental with add-ons, pick it up or have it delivered, and hit the road with 24/7 support. After your trip, return the vehicle hassle-free and share your experience!</p>
                 </div>
@@ -99,7 +100,7 @@
                     <div class="rv-card-content">
                         <div class="rv-card-header">
                             <div class="rv-card-title">Class A</div>
-                            <div class="rv-card-arrow"><a href="types2.html" target="_blank style="text-decoration: none; color:#FEFAE0">→</a></div>
+                            <div class="rv-card-arrow"><a href="types2.html" target=_blank style="text-decoration: none; color:#FEFAE0">→</a></div>
                         </div>
                         <div class="rv-card-description">
                             A spacious, bus-style RV perfect for long road trips and luxurious interiors, a full kitchen, bathroom, and ample storage. Ideal for travelers who seek maximum comfort on the road.
@@ -111,7 +112,7 @@
                     <div class="rv-card-content">
                         <div class="rv-card-header">
                             <div class="rv-card-title">Class B</div>
-                            <div class="rv-card-arrow"><a href="types2.html" target="_blank style="text-decoration: none; color:#FEFAE0">→</a></div>
+                            <div class="rv-card-arrow"><a href="types2.html" target=_blank style="text-decoration: none; color:#FEFAE0">→</a></div>
                         </div>
                         <div class="rv-card-description">
                             A compact, fuel-efficient van with essential amenities, including a small kitchen, bed, and bathroom. Perfect for solo travelers or couples looking for easy maneuverability and parking.
@@ -171,7 +172,7 @@
 
         <section class="contacts" id="contacts">
             
-            <div class="contact-info">
+            <div class="contacts-info">
                 <h2>Contacts</h2>
                 <a href="tel:+XXXXXXXXXXX">+XXXXXXXXXXX</a>
                 <a href="mailto:XXXXX@gmail.com">XXXXX@gmail.com</a>
